#set(RSTKCoreTests
#  GradientDescentFunctionalOptimizerTest.cxx
#)
#
#ADD_EXECUTABLE(GradientDescentFunctionalOptimizerTest GradientDescentFunctionalOptimizerTest.cxx ) 
#TARGET_LINK_LIBRARIES(GradientDescentFunctionalOptimizerTest ${ITK_LIBRARIES} )

#add_library(RSTKOptimizers ${RSTKOptimizers_SRC})
#target_link_libraries(RSTKOptimizers
#  ${RSTKEnergy_LIBRARIES}
#  )